--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -50,5 +50,6 @@ jobs:
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
 
-    # - name: Run test suite
-    #   run: composer run-script test
+    - name: Run test suite
+      run: XDEBUG_MODE=coverage vendor/bin/phpunit --coverage-clover coverage.xml
+      working-directory: /var/www/html
