--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -20,7 +20,7 @@ jobs:
 
     steps:
     - name: Clone Repository
-      run: cd /var/www && rm -rf html && git clone https://github.com/ramaID/playground-11.git html && cd html && ls
+      run: cd /var/www && rm -rf html && git clone https://github.com/ramaID/calculator.git html && cd html && ls
 
     - name: Verify Clone
       run: |
